--- a/package.json
+++ b/package.json
@@ -10,6 +10,19 @@
   "bugs": {
     "url": "https://github.com/bouzuya/b-html/issues"
   },
+  "devDependencies": {
+    "coffee-script": "^1.9.3",
+    "del": "^1.2.0",
+    "gulp": "^3.9.0",
+    "gulp-coffee": "^2.3.1",
+    "gulp-espower": "^0.10.1",
+    "gulp-mocha": "^2.1.3",
+    "gulp-sourcemaps": "^1.5.2",
+    "gulp-util": "^3.0.6",
+    "gulp-watch": "^4.3.4",
+    "power-assert": "^0.11.0",
+    "run-sequence": "^1.1.2"
+  },
   "homepage": "https://github.com/bouzuya/b-html#readme",
   "keywords": [
     "HTML"
@@ -21,6 +34,9 @@
     "url": "git+https://github.com/bouzuya/b-html.git"
   },
   "scripts": {
-    "test": "gulp test"
+    "build": "gulp build",
+    "clean": "gulp clean",
+    "test": "gulp test",
+    "watch": "gulp watch"
   }
 }
