--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "url": "git+https://github.com/bouzuya/b-html.git"
   },
   "scripts": {
+    "prepublish": "gulp",
     "build": "gulp build",
     "clean": "gulp clean",
     "test": "gulp test",
