add b-html to keyword

--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
   ],
   "homepage": "https://github.com/bouzuya/b-html#readme",
   "keywords": [
+    "b-html",
     "HTML"
   ],
   "license": "MIT",
